<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Bike</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="emergency">Set Emergency Contact Numbers</string>
    <string name="title_activity_edit_emergency_number">Emergency Numbers</string>
    <string name="no1">Number - 1</string>
    <string name="no2">Number - 2</string>
    <string name="no3">Number - 3</string>
    <string name="emergency_head">EMERGENCY NUMBERS</string>
    <string name="save">Save</string>
    <string name="enable">Enable</string>
    <string name="start_navigate">Start Journey</string>
    <string name="home_heading">Smart Helmet</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_set_destination">SetDestination</string>
    <string name="start">START</string>
    <string name="title_activity_registration">Registration</string>
    <string name="next">Next</string>
    <string name="phoneno">Enter your phone number</string>
    <string name="onetime">One Time Registration</string>
    <string name="title_activity_name_blood_group">NameBloodGroup</string>
    <string name="bloodgroup">Enter your Blood Group</string>
    <string name="name">Enter your name</string>
    <string name="title_activity_show_profile">Profile</string>
    <string name="showprofile">Show Profile</string>
    <string name="title_activity_fuel_details">Fuel Console</string>
    <string name="title_activity_bargraph_display">Bar Graph</string>
    <string name="title_activity_details">Bike Details</string>

</resources>
